Changed colors and added a slider

--- a/style/_animations.scss
+++ b/style/_animations.scss
@@ -1,3 +1,11 @@
+@keyframes autoRun {
+	from {
+		left: 100%;
+	}
+	to {
+		left: calc(var(--width) * -1);
+	}
+}
 .show-up-blur {
 	animation: showUpBlurAnimation 1s forwards;
 }
