--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -11,10 +11,9 @@
 }
 
 // Variables
-$primary-color: #350fd7;
-$secondary-color: #150384;
-$bg-color: #080054;
-$light-color: #fbf9fa;
+$primary-color: #ff3f5c;
+$secondary-color: #f8d1d1;
+$light-color: #f8d1d1;
 $dark-color: #19181f;
 $synth-color: #006dff;
 $border-general: solid 1px rgba($primary-color, 0.4);
@@ -66,8 +65,8 @@ hr {
 	height: 2px;
 }
 body {
-	background-color: $bg-color;
-	color: $light-color;
+	background-color: $secondary-color;
+	color: $dark-color;
 }
 .body-content {
 	display: grid;
@@ -90,7 +89,7 @@ a {
 	max-width: 600px;
 	letter-spacing: 2px;
 	text-transform: uppercase;
-	color: $light-color;
+	color: $secondary-color;
 	text-align: center;
 	font-weight: 600;
 	position: relative;
@@ -102,9 +101,28 @@ a {
 	}
 }
 .ghost-btn {
+	padding: 0.5rem 1.6rem;
+	border-radius: $border-radius-rounded;
 	background: transparent;
-	color: $dark-color;
+	border: 2px solid $secondary-color;
+	font-size: 1rem;
+	cursor: pointer;
+	width: 100%;
+	min-width: 200px;
+	max-width: 600px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	color: $secondary-color;
+	text-align: center;
+	font-weight: 600;
+	position: relative;
+	overflow: hidden;
 	transition: all 0.3s ease;
+
+	&:hover {
+		background: $secondary-color;
+		color: $primary-color;
+	}
 }
 section {
 	text-align: center;
