--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@
   font-weight: 400;
 }
 .important-text {
-  color: #350fd7;
+  color: #ff3f5c;
 }
 
 .bold {
@@ -57,13 +57,13 @@
 
 hr {
   width: 100%;
-  background-color: #fbf9fa;
+  background-color: #f8d1d1;
   height: 2px;
 }
 
 body {
-  background-color: #080054;
-  color: #fbf9fa;
+  background-color: #f8d1d1;
+  color: #19181f;
 }
 
 .body-content {
@@ -74,14 +74,14 @@ body {
 }
 
 a {
-  color: #fbf9fa;
+  color: #f8d1d1;
 }
 
 .btn {
   padding: 0.5rem 1.6rem;
   border-radius: 100px;
-  background: #350fd7;
-  border: 2px solid #350fd7;
+  background: #ff3f5c;
+  border: 2px solid #ff3f5c;
   font-size: 1rem;
   cursor: pointer;
   width: 100%;
@@ -89,7 +89,7 @@ a {
   max-width: 600px;
   letter-spacing: 2px;
   text-transform: uppercase;
-  color: #fbf9fa;
+  color: #f8d1d1;
   text-align: center;
   font-weight: 600;
   position: relative;
@@ -101,9 +101,27 @@ a {
 }
 
 .ghost-btn {
+  padding: 0.5rem 1.6rem;
+  border-radius: 100px;
   background: transparent;
-  color: #19181f;
+  border: 2px solid #f8d1d1;
+  font-size: 1rem;
+  cursor: pointer;
+  width: 100%;
+  min-width: 200px;
+  max-width: 600px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #f8d1d1;
+  text-align: center;
+  font-weight: 600;
+  position: relative;
+  overflow: hidden;
   transition: all 0.3s ease;
+}
+.ghost-btn:hover {
+  background: #f8d1d1;
+  color: #ff3f5c;
 }
 
 section {
@@ -114,7 +132,7 @@ section {
 
 .section-title {
   font-family: "PlayfairDisplay";
-  color: #fbf9fa;
+  color: #f8d1d1;
   text-transform: capitalize;
   font-size: 2rem;
   letter-spacing: 2px;
@@ -126,7 +144,7 @@ section {
 }
 
 .section-subtitle {
-  color: #fbf9fa;
+  color: #f8d1d1;
   margin-top: 1rem;
   margin-bottom: 2rem;
   font-size: 1.2rem;
@@ -134,9 +152,9 @@ section {
 
 .card {
   border-radius: 12px;
-  background: #150384;
+  background: #f8d1d1;
   overflow: hidden;
-  border: solid 1px #350fd7;
+  border: solid 1px #ff3f5c;
 }
 .card .card-content {
   padding: 1rem;
@@ -146,7 +164,7 @@ section {
 }
 .card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 4px 20px rgba(53, 15, 215, 0.8);
+  box-shadow: 0 4px 20px rgba(255, 63, 92, 0.8);
 }
 
 .two-columns {
@@ -161,6 +179,14 @@ section {
   }
 }
 
+@keyframes autoRun {
+  from {
+    left: 100%;
+  }
+  to {
+    left: calc(var(--width) * -1);
+  }
+}
 .show-up-blur {
   animation: showUpBlurAnimation 1s forwards;
 }
@@ -253,8 +279,8 @@ section {
   align-items: center;
   width: 100%;
   font-weight: bold;
-  background: #150384;
-  border-bottom: 1px solid #350fd7;
+  background: #f8d1d1;
+  border-bottom: 1px solid #ff3f5c;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -264,7 +290,7 @@ section {
   align-items: center;
 }
 .nav-icon-wrapper:hover .nav-title {
-  color: #350fd7;
+  color: #ff3f5c;
 }
 
 .nav-icon {
@@ -295,7 +321,7 @@ section {
     font-size: 0.9rem;
   }
   .nav-links p {
-    color: #fbf9fa;
+    color: #ff3f5c;
     position: relative;
   }
   .nav-links p::after {
@@ -305,7 +331,7 @@ section {
     left: 0;
     width: 0;
     height: 2px;
-    background-color: #fbf9fa;
+    background-color: #ff3f5c;
     transition: width 0.3s ease;
   }
   .nav-links p:hover::after {
@@ -333,10 +359,10 @@ section {
   height: 100vh;
   transform: translateX(-200%);
   padding: 1rem;
-  background-color: #350fd7;
+  background-color: #ff3f5c;
   z-index: -1;
   gap: 50px;
-  border-right: solid 1px #150384;
+  border-right: solid 1px #f8d1d1;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
@@ -355,7 +381,7 @@ section {
   display: flex;
   gap: 10px;
   align-items: center;
-  color: #fbf9fa;
+  color: #f8d1d1;
   font-size: 1.5rem;
 }
 
@@ -389,7 +415,7 @@ section {
 .toggle-btn .bar {
   height: 2px;
   width: 100%;
-  background-color: #fbf9fa;
+  background-color: #ff3f5c;
   border-radius: 2px;
   transition: transform 0.4s ease, opacity 0.2s ease;
 }
@@ -405,12 +431,12 @@ section {
 
 .footer {
   margin-top: 2rem;
-  background: #350fd7;
+  background: #ff3f5c;
   color: black;
   padding: 20px;
   text-align: center;
   padding-block: 20vh;
-  color: #fbf9fa;
+  color: #f8d1d1;
 }
 .footer .social-media {
   margin-top: 10px;
@@ -422,7 +448,7 @@ section {
   width: 35px;
 }
 .footer .bold a {
-  color: #fbf9fa;
+  color: #f8d1d1;
 }
 
 .header {
@@ -440,7 +466,7 @@ section {
 .header-content {
   height: 80%;
   padding: 2rem;
-  color: #fbf9fa;
+  color: #f8d1d1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -480,7 +506,7 @@ section {
 .header-subtitle {
   font-size: 1.2rem;
   max-width: 600px;
-  color: #fbf9fa;
+  color: #f8d1d1;
   font-weight: bold;
   /* 	@media screen and (min-width: 700px) {
   	font-size: 1rem;
@@ -501,8 +527,36 @@ section {
   }
 }
 
+.slider {
+  width: 100%;
+  height: var(--height);
+  overflow: hidden;
+  mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
+}
+
+.list {
+  display: flex;
+  width: 100%;
+  min-width: calc(var(--width) * var(--quantity));
+  position: relative;
+}
+
+.item {
+  width: var(--width);
+  height: var(--height);
+  position: absolute;
+  left: 100%;
+  animation: autoRun 15s linear infinite;
+  animation-delay: calc(15s / var(--quantity) * (var(--position) - 1)) !important;
+}
+.item h1 {
+  font-family: "PlayfairDisplay";
+  letter-spacing: 1px;
+  text-wrap: nowrap;
+}
+
 .why-us {
-  background-color: #150384;
+  background-color: #ff3f5c;
   max-width: none;
   width: 100%;
   padding-block: 3rem;
@@ -529,6 +583,7 @@ section {
   flex-direction: column;
   justify-content: center;
   overflow: hidden;
+  color: #f8d1d1;
 }
 .reason .reason-icon {
   width: 50px;
@@ -544,7 +599,6 @@ section {
   font-size: 0.95rem;
   line-height: 1.6;
   text-align: justify;
-  color: #fbf9fa;
 }
 @media screen and (min-width: 700px) {
   .reason {
@@ -552,57 +606,58 @@ section {
   }
 }
 
-.featured-dress {
+.about-us {
   max-width: none;
   width: 100%;
   padding: 0;
 }
 @media screen and (min-width: 700px) {
-  .featured-dress {
+  .about-us {
     padding: 1rem;
     max-width: 1000px;
   }
 }
 
-.featured-dress-container {
+.about-us-container {
   justify-items: center;
 }
 
-.featured-dress-img {
+.about-us-img {
   width: 100%;
   max-width: 350px;
   border-radius: 12px;
 }
 
-.featured-dress-text {
+.about-us-text {
   padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 1rem;
-  background-color: #150384;
+  background-color: #ff3f5c;
+  color: #f8d1d1;
 }
-.featured-dress-text .section-subtitle {
+.about-us-text .section-subtitle {
   margin-top: unset;
   margin-bottom: unset;
 }
-.featured-dress-text p {
+.about-us-text p {
   text-align: justify;
 }
-.featured-dress-text .btn {
+.about-us-text .ghost-btn {
   margin-top: 1rem;
 }
 @media screen and (min-width: 700px) {
-  .featured-dress-text {
+  .about-us-text {
     text-align: justify;
   }
-  .featured-dress-text .section-title {
+  .about-us-text .section-title {
     font-size: 2.5rem;
   }
-  .featured-dress-text p {
+  .about-us-text p {
     text-align: left;
   }
-  .featured-dress-text .btn {
+  .about-us-text .btn {
     max-width: 150px;
   }
 }
@@ -674,6 +729,11 @@ section.image-gallery {
   display: block;
 }
 
+.shop-preview .section-title,
+.shop-preview .section-subtitle {
+  color: #ff3f5c;
+}
+
 .shop-preview-container {
   display: flex;
   flex-direction: column;
@@ -697,12 +757,12 @@ section.image-gallery {
   position: relative;
   width: 100%;
   aspect-ratio: 3/4;
-  background-color: #150384;
+  background-color: #f8d1d1;
   border-radius: 12px;
   overflow: hidden;
   text-decoration: none;
   scroll-snap-align: start;
-  border: solid 1px #350fd7;
+  border: solid 1px #ff3f5c;
 }
 .product-card-container .product-card:hover {
   transform: scale(1.02);
@@ -715,7 +775,7 @@ section.image-gallery {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #350fd7;
+  background: #ff3f5c;
   border-radius: 100px;
   padding: 0.75rem;
   margin: 0.75rem;
@@ -725,7 +785,7 @@ section.image-gallery {
   white-space: nowrap;
   text-overflow: ellipsis;
   text-align: center;
-  color: #fbf9fa;
+  color: #f8d1d1;
   z-index: 1;
 }
 @media screen and (min-width: 768px) {
@@ -751,8 +811,8 @@ section.image-gallery {
   bottom: 0;
   left: 0;
   right: 0;
-  background: linear-gradient(rgba(8, 0, 84, 0.3), rgba(8, 0, 84, 0.9));
-  box-shadow: 0 -15px 50px rgba(8, 0, 84, 0.4);
+  background: linear-gradient(rgba(248, 209, 209, 0.3), rgba(248, 209, 209, 0.9));
+  box-shadow: 0 -15px 50px rgba(248, 209, 209, 0.4);
   width: 100%;
   height: 30%;
   z-index: 0;
