Added features section and changed primary color

--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -11,7 +11,7 @@
 }
 
 // Variables
-$primary-color: #ff3f5c;
+$primary-color: #f9667c;
 $secondary-color: #f8d1d1;
 $light-color: #f8d1d1;
 $dark-color: #19181f;
