--- a/style/style.scss
+++ b/style/style.scss
@@ -106,7 +106,7 @@
 	height: var(--height);
 	position: absolute;
 	left: 100%;
-	animation: autoRun 15s linear infinite;
+	animation: autoRun 5s linear infinite;
 	animation-delay: calc(
 		(15s / var(--quantity)) * (var(--position) - 1)
 	) !important;
@@ -195,6 +195,17 @@
 	gap: 1rem;
 	background-color: $primary-color;
 	color: $light-color;
+	position: relative;
+
+	&::after {
+		position: absolute;
+		content: "\2661";
+		top: 0;
+		right: 2rem;
+		font-size: 5rem;
+		color: $secondary-color;
+		animation: pulseAnimation 1s infinite;
+	}
 
 	.section-subtitle {
 		margin-top: unset;
@@ -298,6 +309,76 @@ section.image-gallery {
 	height: 100%;
 	object-fit: cover;
 	display: block;
+}
+
+// features
+.featutes {
+	padding: 2rem;
+
+	.section-title,
+	.section-subtitle {
+		color: $primary-color;
+	}
+}
+
+.features-container {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+}
+
+.features-column {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+}
+
+.feature-item {
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+}
+
+.feature-icon {
+	width: 40px;
+	margin-bottom: 0.75rem;
+}
+
+.feature-title {
+	font-family: "PlayfairDisplay";
+	font-size: 1.2rem;
+	letter-spacing: 1px;
+	color: $primary-color;
+	margin-bottom: 0.75rem;
+}
+
+.feature-text {
+	font-size: 0.95rem;
+	color: $primary-color;
+	line-height: 1.5;
+}
+
+@media screen and (min-width: 700px) {
+	.featutes {
+		padding: 2rem;
+	}
+
+	.features-container {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	.features-column {
+		max-width: 450px;
+	}
+
+	.feature-title {
+		font-size: 1.3rem;
+	}
+
+	.feature-text {
+		font-size: 1rem;
+	}
 }
 
 // preview shop
