--- a/style/_animations.scss
+++ b/style/_animations.scss
@@ -1,30 +1,3 @@
-@keyframes autoRun {
-	from {
-		left: 100%;
-	}
-	to {
-		left: calc(var(--width) * -1);
-	}
-}
-.show-up-blur {
-	animation: showUpBlurAnimation 1s forwards;
-}
-@keyframes showUpBlurAnimation {
-	0% {
-		opacity: 0;
-		filter: blur(15px);
-		transform: translateX(-300dvw);
-	}
-	80% {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-		filter: blur(0px);
-		transform: translateX(0dvw);
-	}
-}
-
 .blur-out {
 	filter: blur(10px);
 
@@ -45,14 +18,22 @@
 }
 
 .rotate-in {
-	transform: translateX(-100%) rotate(-45deg);
+	transform: translateX(-90%) rotate(-45deg);
 
 	&.animated {
 		transform: translateX(0%) rotate(0deg);
 	}
 }
 
-.zoom-up {
+.rotate-in-right {
+	transform: translateX(90%) rotate(45deg);
+
+	&.animated {
+		transform: translateX(0%) rotate(0deg);
+	}
+}
+
+.zoom-in {
 	transform: scale(0) translateY(100%);
 
 	&.animated {
@@ -96,5 +77,43 @@
 			right: -30px;
 			transform: rotate(360deg);
 		}
+	}
+}
+
+@keyframes autoRun {
+	from {
+		left: 100%;
+	}
+	to {
+		left: calc(var(--width) * -1);
+	}
+}
+.show-up-blur {
+	animation: showUpBlurAnimation 1s forwards;
+}
+@keyframes showUpBlurAnimation {
+	0% {
+		opacity: 0;
+		filter: blur(15px);
+		transform: translateX(-300dvw);
+	}
+	80% {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+		filter: blur(0px);
+		transform: translateX(0dvw);
+	}
+}
+@keyframes pulseAnimation {
+	0% {
+		scale: 1;
+	}
+	20% {
+		scale: 1.2;
+	}
+	to {
+		scale: 0.9;
 	}
 }
