--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@
   font-weight: 400;
 }
 .important-text {
-  color: #ff3f5c;
+  color: #f9667c;
 }
 
 .bold {
@@ -80,8 +80,8 @@ a {
 .btn {
   padding: 0.5rem 1.6rem;
   border-radius: 100px;
-  background: #ff3f5c;
-  border: 2px solid #ff3f5c;
+  background: #f9667c;
+  border: 2px solid #f9667c;
   font-size: 1rem;
   cursor: pointer;
   width: 100%;
@@ -121,7 +121,7 @@ a {
 }
 .ghost-btn:hover {
   background: #f8d1d1;
-  color: #ff3f5c;
+  color: #f9667c;
 }
 
 section {
@@ -154,7 +154,7 @@ section {
   border-radius: 12px;
   background: #f8d1d1;
   overflow: hidden;
-  border: solid 1px #ff3f5c;
+  border: solid 1px #f9667c;
 }
 .card .card-content {
   padding: 1rem;
@@ -164,7 +164,7 @@ section {
 }
 .card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 4px 20px rgba(255, 63, 92, 0.8);
+  box-shadow: 0 4px 20px rgba(249, 102, 124, 0.8);
 }
 
 .two-columns {
@@ -179,33 +179,6 @@ section {
   }
 }
 
-@keyframes autoRun {
-  from {
-    left: 100%;
-  }
-  to {
-    left: calc(var(--width) * -1);
-  }
-}
-.show-up-blur {
-  animation: showUpBlurAnimation 1s forwards;
-}
-
-@keyframes showUpBlurAnimation {
-  0% {
-    opacity: 0;
-    filter: blur(15px);
-    transform: translateX(-300dvw);
-  }
-  80% {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-    filter: blur(0px);
-    transform: translateX(0dvw);
-  }
-}
 .blur-out {
   filter: blur(10px);
 }
@@ -224,16 +197,23 @@ section {
 }
 
 .rotate-in {
-  transform: translateX(-100%) rotate(-45deg);
+  transform: translateX(-90%) rotate(-45deg);
 }
 .rotate-in.animated {
   transform: translateX(0%) rotate(0deg);
 }
 
-.zoom-up {
+.rotate-in-right {
+  transform: translateX(90%) rotate(45deg);
+}
+.rotate-in-right.animated {
+  transform: translateX(0%) rotate(0deg);
+}
+
+.zoom-in {
   transform: scale(0) translateY(100%);
 }
-.zoom-up.animated {
+.zoom-in.animated {
   transform: scale(1) translateY(0%);
 }
 
@@ -269,6 +249,44 @@ section {
   transform: rotate(360deg);
 }
 
+@keyframes autoRun {
+  from {
+    left: 100%;
+  }
+  to {
+    left: calc(var(--width) * -1);
+  }
+}
+.show-up-blur {
+  animation: showUpBlurAnimation 1s forwards;
+}
+
+@keyframes showUpBlurAnimation {
+  0% {
+    opacity: 0;
+    filter: blur(15px);
+    transform: translateX(-300dvw);
+  }
+  80% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    filter: blur(0px);
+    transform: translateX(0dvw);
+  }
+}
+@keyframes pulseAnimation {
+  0% {
+    scale: 1;
+  }
+  20% {
+    scale: 1.2;
+  }
+  to {
+    scale: 0.9;
+  }
+}
 .nav {
   position: sticky;
   top: 0;
@@ -280,7 +298,7 @@ section {
   width: 100%;
   font-weight: bold;
   background: #f8d1d1;
-  border-bottom: 1px solid #ff3f5c;
+  border-bottom: 1px solid #f9667c;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -290,7 +308,7 @@ section {
   align-items: center;
 }
 .nav-icon-wrapper:hover .nav-title {
-  color: #ff3f5c;
+  color: #f9667c;
 }
 
 .nav-icon {
@@ -321,7 +339,7 @@ section {
     font-size: 0.9rem;
   }
   .nav-links p {
-    color: #ff3f5c;
+    color: #f9667c;
     position: relative;
   }
   .nav-links p::after {
@@ -331,7 +349,7 @@ section {
     left: 0;
     width: 0;
     height: 2px;
-    background-color: #ff3f5c;
+    background-color: #f9667c;
     transition: width 0.3s ease;
   }
   .nav-links p:hover::after {
@@ -359,7 +377,7 @@ section {
   height: 100vh;
   transform: translateX(-200%);
   padding: 1rem;
-  background-color: #ff3f5c;
+  background-color: #f9667c;
   z-index: -1;
   gap: 50px;
   border-right: solid 1px #f8d1d1;
@@ -415,7 +433,7 @@ section {
 .toggle-btn .bar {
   height: 2px;
   width: 100%;
-  background-color: #ff3f5c;
+  background-color: #f9667c;
   border-radius: 2px;
   transition: transform 0.4s ease, opacity 0.2s ease;
 }
@@ -431,7 +449,7 @@ section {
 
 .footer {
   margin-top: 2rem;
-  background: #ff3f5c;
+  background: #f9667c;
   color: black;
   padding: 20px;
   text-align: center;
@@ -546,7 +564,7 @@ section {
   height: var(--height);
   position: absolute;
   left: 100%;
-  animation: autoRun 15s linear infinite;
+  animation: autoRun 5s linear infinite;
   animation-delay: calc(15s / var(--quantity) * (var(--position) - 1)) !important;
 }
 .item h1 {
@@ -556,7 +574,7 @@ section {
 }
 
 .why-us {
-  background-color: #ff3f5c;
+  background-color: #f9667c;
   max-width: none;
   width: 100%;
   padding-block: 3rem;
@@ -634,8 +652,18 @@ section {
   flex-direction: column;
   justify-content: space-between;
   gap: 1rem;
-  background-color: #ff3f5c;
+  background-color: #f9667c;
   color: #f8d1d1;
+  position: relative;
+}
+.about-us-text::after {
+  position: absolute;
+  content: "♡";
+  top: 0;
+  right: 2rem;
+  font-size: 5rem;
+  color: #f8d1d1;
+  animation: pulseAnimation 1s infinite;
 }
 .about-us-text .section-subtitle {
   margin-top: unset;
@@ -729,9 +757,72 @@ section.image-gallery {
   display: block;
 }
 
+.featutes {
+  padding: 2rem;
+}
+.featutes .section-title,
+.featutes .section-subtitle {
+  color: #f9667c;
+}
+
+.features-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.features-column {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.feature-item {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.feature-icon {
+  width: 40px;
+  margin-bottom: 0.75rem;
+}
+
+.feature-title {
+  font-family: "PlayfairDisplay";
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  color: #f9667c;
+  margin-bottom: 0.75rem;
+}
+
+.feature-text {
+  font-size: 0.95rem;
+  color: #f9667c;
+  line-height: 1.5;
+}
+
+@media screen and (min-width: 700px) {
+  .featutes {
+    padding: 2rem;
+  }
+  .features-container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .features-column {
+    max-width: 450px;
+  }
+  .feature-title {
+    font-size: 1.3rem;
+  }
+  .feature-text {
+    font-size: 1rem;
+  }
+}
 .shop-preview .section-title,
 .shop-preview .section-subtitle {
-  color: #ff3f5c;
+  color: #f9667c;
 }
 
 .shop-preview-container {
@@ -762,7 +853,7 @@ section.image-gallery {
   overflow: hidden;
   text-decoration: none;
   scroll-snap-align: start;
-  border: solid 1px #ff3f5c;
+  border: solid 1px #f9667c;
 }
 .product-card-container .product-card:hover {
   transform: scale(1.02);
@@ -775,7 +866,7 @@ section.image-gallery {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #ff3f5c;
+  background: #f9667c;
   border-radius: 100px;
   padding: 0.75rem;
   margin: 0.75rem;
