--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -11,8 +11,8 @@
 }
 
 // Variables
-$primary-color: #f9667c;
-$secondary-color: #f8d1d1;
+$primary-color: #8e46ce;
+$secondary-color: #f8becc;
 $light-color: #f8d1d1;
 $dark-color: #19181f;
 $synth-color: #006dff;
