--- a/style/style.scss
+++ b/style/style.scss
@@ -19,17 +19,18 @@
 .header {
 	background-image: url(../assets/header.jpg);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain;
 	background-position: top;
+	background-color: $primary-color;
 	height: 100dvh;
 
-	/* 	@media screen and (min-width: 700px) {
+	@media screen and (min-width: 700px) {
 		background-position: center;
 		background-size: cover;
-	} */
+	}
 }
 .header-content {
-	height: 80%;
+	height: 95%;
 	padding: 2rem;
 	color: $light-color;
 	display: flex;
@@ -54,13 +55,9 @@
 	font-family: "PlayfairDisplay";
 
 	@media screen and (min-width: 700px) {
-		font-size: 10dvw;
+		font-size: 8.5dvw;
 		transform: none;
 		text-align: left;
-
-		:first-child {
-			font-size: 8dvw;
-		}
 	}
 }
 .header-subtitle {
@@ -68,7 +65,7 @@
 	max-width: 600px;
 	color: $light-color;
 	font-weight: bold;
-
+	max-width: 400px;
 	/* 	@media screen and (min-width: 700px) {
 		font-size: 1rem;
 	} */
@@ -77,6 +74,11 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+
+	.btn {
+		background-color: $secondary-color;
+		color: $primary-color;
+	}
 
 	@media screen and (min-width: 700px) {
 		position: unset;
@@ -106,7 +108,8 @@
 	height: var(--height);
 	position: absolute;
 	left: 100%;
-	animation: autoRun 5s linear infinite;
+	animation: autoRun linear infinite;
+	animation-duration: 7s;
 	animation-delay: calc(
 		(15s / var(--quantity)) * (var(--position) - 1)
 	) !important;
@@ -202,7 +205,7 @@
 		content: "\2661";
 		top: 0;
 		right: 2rem;
-		font-size: 5rem;
+		font-size: 4rem;
 		color: $secondary-color;
 		animation: pulseAnimation 1s infinite;
 	}
@@ -216,6 +219,9 @@
 	}
 	.ghost-btn {
 		margin-top: 1rem;
+		&:hover {
+			scale: 0.97;
+		}
 	}
 
 	@media screen and (min-width: 700px) {
