--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -12,7 +12,7 @@
 
 // Variables
 $primary-color: #8e46ce;
-$secondary-color: #f8becc;
+$secondary-color: #eddde1;
 $light-color: #f8d1d1;
 $dark-color: #19181f;
 $synth-color: #006dff;
