--- a/style/style.scss
+++ b/style/style.scss
@@ -116,8 +116,10 @@
 
 	h1 {
 		font-family: "Alice";
+		font-size: 2.5rem;
 		letter-spacing: 1px;
 		text-wrap: nowrap;
+		height: var(--height);
 	}
 }
 
@@ -148,28 +150,22 @@
 	background: url("../assets/dresses/preview_10.png");
 	background-color: rgba(0, 0, 0, 0.6);
 	background-blend-mode: multiply;
-	padding: 0.5rem;
+	padding: 1rem;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-around;
 	overflow: hidden;
 	color: $light-color;
-	position: relative;
 	width: 100%;
 	aspect-ratio: 4/3;
+	text-align: left;
+	border-radius: $border-radius-general;
+	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 
 	&:hover {
 		background-color: rgba(0, 0, 0, 0.8);
-
-		p {
-			opacity: 1;
-		}
-	}
-	.reason-icon {
-		width: 35px;
-		position: absolute;
-		top: 5%;
-		left: 5%;
+		transform: translateY(-8px); // Efecto de elevación
+		box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3); // Sombra más intensa
 	}
 
 	h3 {
@@ -177,8 +173,6 @@
 		font-size: 1.5rem;
 		text-transform: capitalize;
 		letter-spacing: 2px;
-		position: absolute;
-		bottom: 5%;
 	}
 
 	p {
@@ -186,7 +180,6 @@
 		font-size: 0.95rem;
 		line-height: 1.6;
 		text-align: justify;
-		opacity: 0;
 	}
 
 	@media screen and (min-width: 700px) {
@@ -270,10 +263,8 @@
 
 // image gallery
 .image-gallery {
-	padding: 0;
-}
-
-.image-gallery {
+	padding: 0 !important;
+	max-width: 100% !important;
 	width: 100%;
 	margin-block: 2rem;
 	overflow: hidden;
@@ -289,64 +280,53 @@
 
 .image-gallery-container {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-auto-rows: minmax(150px, auto);
-	gap: 5px;
-	max-width: 100%;
-	padding: 5px;
+	grid-template-rows: repeat(3, minmax(150px, auto));
 
 	@media (min-width: 700px) {
-		grid-template-columns: repeat(5, 1fr);
-		grid-auto-rows: minmax(200px, auto);
-		gap: 10px;
-		padding: 10px;
+		grid-template-rows: repeat(3, minmax(200px, auto));
 	}
 }
 
-.image-gallery-item {
-	width: 100%;
-	aspect-ratio: 2 / 3;
-	overflow: hidden;
-	border-radius: $border-radius-general;
-	&:hover {
+.image-gallery-row {
+	display: grid;
+	grid-auto-flow: column;
+	grid-auto-columns: minmax(100px, 200px);
+	animation: slide-left 25s linear infinite;
+
+	.image-gallery-item {
+		width: 100%;
+		aspect-ratio: 2 / 3;
+		overflow: hidden;
+		opacity: 0;
+		animation: fadeInColumn 0.5s ease-out forwards;
+
 		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			transition: transform 0.3s ease;
+			pointer-events: none;
+		}
+
+		&:hover img {
 			transform: scale(1.3);
 		}
-	}
 
-	&:nth-child(3n + 1) {
-		margin-top: 10px; /* Las columnas exteriores se bajan un poco */
-	}
-	&:nth-child(3n + 2) {
-		margin-top: -100px; /* La columna interior se sube un poco */
+		&:nth-child(even) {
+			margin-top: -75%;
+		}
+
+		@for $i from 1 through 10 {
+			&:nth-child(#{$i}) {
+				animation-delay: #{($i - 1) * 0.2}s;
+			}
+		}
 	}
 
 	@media (min-width: 700px) {
-		/* Restablecer los márgenes de móvil para evitar acumulación */
-		&:nth-child(3n + 1),
-		&:nth-child(3n + 2) {
-			margin-top: 0;
-		}
-		/* Nuevos estilos para escritorio */
-		&:nth-child(5n + 1),
-		&:nth-child(5n + 3),
-		&:nth-child(5n + 5) {
-			margin-top: 10px; /* Primera y última columna se baja */
-		}
-		&:nth-child(5n + 2),
-		&:nth-child(5n + 4) {
-			margin-top: -100px; /* Columnas 2 y 4 se suben un poco menos que la del centro */
-		}
+		grid-auto-columns: minmax(150px, 250px);
 	}
 }
-
-.image-gallery-item img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	display: block;
-}
-
 // features
 .featutes {
 	padding: 2rem;
