--- a/style/_animations.scss
+++ b/style/_animations.scss
@@ -111,17 +111,20 @@
 		transform: translateX(0);
 	}
 	100% {
-		transform: translateX(-30%);
+		transform: translateX(-10%);
 	}
 }
-
 @keyframes fadeInColumn {
 	from {
 		opacity: 0;
-		transform: translateX(100%);
+	}
+	5% {
+		opacity: 1;
+	}
+	90% {
+		opacity: 1;
 	}
 	to {
-		opacity: 1;
-		transform: translateX(0);
+		opacity: 0;
 	}
 }
