--- a/style/style.scss
+++ b/style/style.scss
@@ -291,14 +291,14 @@
 	display: grid;
 	grid-auto-flow: column;
 	grid-auto-columns: minmax(100px, 200px);
-	animation: slide-left 25s linear infinite;
+	animation: slide-left 15s linear infinite;
 
 	.image-gallery-item {
 		width: 100%;
 		aspect-ratio: 2 / 3;
 		overflow: hidden;
 		opacity: 0;
-		animation: fadeInColumn 0.5s ease-out forwards;
+		animation: fadeInColumn 15s ease-out infinite;
 
 		img {
 			width: 100%;
@@ -318,7 +318,7 @@
 
 		@for $i from 1 through 10 {
 			&:nth-child(#{$i}) {
-				animation-delay: #{($i - 1) * 0.2}s;
+				animation-delay: #{($i - 1) * 0.1}s;
 			}
 		}
 	}
@@ -327,6 +327,7 @@
 		grid-auto-columns: minmax(150px, 250px);
 	}
 }
+
 // features
 .featutes {
 	padding: 2rem;
